<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@drawable/reshape"
    android:orientation="horizontal"
    android:layout_marginBottom="10dp"
    >
    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="16dp">

        <TextView
            android:id="@+id/taskTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/eat_break_fast"
            android:textAlignment="center"
            android:textColor="#0C0909"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/desTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/eat_a_healthy_diet"
            android:textAlignment="center"
            android:textColor="#786C6C"
            android:textSize="18sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="70dp">

        <TextView
            android:id="@+id/dateTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/today"
            android:textAlignment="center"
            android:textColor="#E91E63"
            android:textSize="20sp" />

    </LinearLayout>



</LinearLayout>